...
  NewJieliZhiNeng

  Created by 杰理科技 on 2020/5/13.
  Copyright © 2020 杰理科技. All rights reserved.
*/

"多媒体" = "Multi-Media";
"音效" = "EQ-Seting";
"设备" = "Devices";
"短按耳机" = "Short press headset";
"轻点两下耳机" = "Tap the headset twice";
"自然" = "Normal";
"摇滚" = "Rock";
"流行" = "Popular";
"经典" = "Classical";
...
