...
    }
    return self;
}

-(void)onManagerAciton{
    if (isManger) {
        [btnManager setTitle:kJL_TXT("device_paired_finish") forState:UIControlStateNormal];
        isManger = NO;
    }else{
        [btnManager setTitle:kJL_TXT("freq_point_manage") forState:UIControlStateNormal];
        isManger = YES;
    }
    [self updateBtnIsDelete:isManger];
...
